--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>AirBnB Clone</title>
+		<link rel="stylesheet" type="text/css" href="styles/2-common.css" />
+		<link rel="stylesheet" type="text/css" href="styles/2-footer.css" />
+		<link rel="stylesheet" type="text/css" href="styles/2-header.css" />
+	</head>
+	<body>
+		<header>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>AirBnB Clone</title>
-	<link rel="stylesheet" type="text/css" href="styles/2-common.css" />
-	<link rel="stylesheet" type="text/css" href="styles/2-footer.css" />
-	<link rel="stylesheet" type="text/css" href="styles/2-header.css" />
-
-
-
-
-
-</head>
-
-<body>
-	<header>
-
-	</header>
-	<footer>
-		<p>Holberton School</p>
-	</footer>
-	</bodys>
-
+		</header>
+		<footer>
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
